--- a/Nginx/http_logs.conf
+++ b/Nginx/http_logs.conf
@@ -1,7 +1,8 @@
+#Nginx-error-log定义路径
 error_log /apps/nginx/logs/error.log error;
 
 
-#Nginx-error-log定义路径
+#Nginx-access-json-log定义路径
 log_format access_json '{"@timestamp":"$time_iso8601",'
         '"host":"$server_addr",'
         '"clientip":"$remote_addr",'
